--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,10 @@
             android:id="@+id/nav_list_people"
             android:icon="@drawable/ic_list"
             android:title="@string/list_people" />
+        <item
+            android:id="@+id/nav_share"
+            android:icon="@drawable/ic_share"
+            android:title="@string/share" />
     </group>
 
 </menu>
