--- a/app/src/main/res/layout/adapter_person.xml
+++ b/app/src/main/res/layout/adapter_person.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="7dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -65,6 +64,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/delete_person"
+                android:src="@android:drawable/ic_menu_delete"
+                android:layout_gravity="right"
+                android:layout_width="25dp"
+                android:layout_height="25dp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
