--- a/app/src/main/res/layout/fragment_save_person.xml
+++ b/app/src/main/res/layout/fragment_save_person.xml
@@ -11,6 +11,7 @@
         <EditText
             android:id="@+id/input_name"
             android:hint="@string/hint_name_person"
+            android:singleLine="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -18,12 +19,14 @@
             android:id="@+id/input_phone"
             android:hint="@string/hint_phone_person"
             android:inputType="numberDecimal"
+            android:singleLine="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <EditText
             android:id="@+id/input_email"
             android:hint="@string/hint_email_person"
+            android:singleLine="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
