--- a/app/src/main/res/layout/adapter_person.xml
+++ b/app/src/main/res/layout/adapter_person.xml
@@ -65,12 +65,25 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
-            <ImageButton
-                android:id="@+id/delete_person"
-                android:src="@android:drawable/ic_menu_delete"
-                android:layout_gravity="right"
-                android:layout_width="25dp"
-                android:layout_height="25dp" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="right"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageButton
+                    android:id="@+id/edit_person"
+                    android:src="@android:drawable/ic_menu_edit"
+                    android:layout_gravity="right"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp" />
+
+                <ImageButton
+                    android:id="@+id/delete_person"
+                    android:src="@android:drawable/ic_menu_delete"
+                    android:layout_gravity="right"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp" />
+            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
